fix: z-index of header leaderboard

--- a/app/globals.css
+++ b/app/globals.css
@@ -500,7 +500,7 @@ body {
   .rc-table-header {
     position: sticky;
     top: 0;
-    z-index: 100;
+    z-index: 49;
     background: black;
   }
   table {
@@ -528,7 +528,7 @@ body {
     .table-leaderboard-row-my-rank {
       position: sticky !important;
       @apply top-[48px] md:top-[50px];
-      z-index: 200 !important;
+      z-index: 49 !important;
       background-color: #0B1320 !important;
       background-image: linear-gradient(90deg, rgba(187, 249, 133, 0.3) 0%, rgba(187, 249, 133, 0) 100%) !important;
       
